@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- --------     -----------------------------------------------------------
+2002-03-15 allenb       Added setTrans(matrix) function.
 2002-03-14 allenb       Added identity(matrix) function.
 2002-03-14 allenb       Added gmtlASSERT macro to make gmtl more standalone
 2002-02-24 nonchocoboy  Added LineSeg class and comparitors.
